tests/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-one-is-struct-4.stderr
error: lifetime may not live long enough
  --> $DIR/ex3-both-anon-regions-one-is-struct-4.rs:4:5
   |
LL | fn foo(mut y: Ref, x: &u32) {
   |        -----          - let's call the lifetime of this reference `'1`
   |        |
   |        has type `Ref<'_, '2>`
LL |     y.b = x;
   |     ^^^^^^^ assignment requires that `'1` must outlive `'2`

error: aborting due to previous error

